# Sudokux-solver

./: Box_line_reduction.c  CMakeLists.txt  Hidden_singles.c  Naked_pairs_triples.c  Pointing_pairs.c  R1.c  R10.c  R11.c  R12.c  R13.c  R2.c  R3.c  R4.c  R7.c  R8.c  R9.c  README.md  X_wing_strategy.c  library.h  main.c  solutions.txt  tabuleiros.txt
