cmake_minimum_required(VERSION 3.12)
project(ProjetoFinalAEDLP C)

set(CMAKE_C_STANDARD 99)

add_executable(ProjetoFinalAEDLP main.c cmake-build-debug/ R4.c R1.c R2.c R3.c library.h R8.c R7.c R9.c R10.c R13.c R11.c R12.c Hidden_singles.c Naked_pairs_triples.c Pointing_pairs.c Box_line_reduction.c X_wing_strategy.c)